added checkout page

--- a/dashboard.html
+++ b/dashboard.html
@@ -16,7 +16,7 @@
   </head>
   <body class="container-fluid">
     <nav class="navbar navbar-expand-lg navbar-lightc bg-light">
-      <a class="navbar-brand">Pizza Spot</a>
+      <a class="navbar-brand" href="index.html">Pizza Spot</a>
       <button
         class="navbar-toggler"
         data-target="#my-nav"
@@ -50,6 +50,8 @@
       <p>Dashboard</p>
       <h2>List of avaibale pizza</h2>
     </section>
+
+<c
 
     <div class="row mx-4">
       <div class="card col-lg-3 m-2">
